--- a/backend/package.json
+++ b/backend/package.json
@@ -9,17 +9,25 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "adm-zip": "^0.5.16",
+    "axios": "^1.12.2",
+    "bullmq": "^5.61.0",
+    "crypto": "^1.0.1",
+    "dotenv": "^17.2.3",
+    "ioredis": "^5.8.1",
+    "mongoose": "^8.19.1",
+    "next": "15.5.5",
     "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.5.5"
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@types/adm-zip": "^0.5.7",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "15.5.5",
-    "@eslint/eslintrc": "^3"
+    "typescript": "^5"
   }
 }
